# apitkt

./: README.md  pyproject.toml
src/apitkt/: __init__.py  client.py  exceptions.py  log.py
tests/: test_client_basic.py
