[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apitkt"
version = "0.1.0"
description = "Lightweight toolkit for building robust API clients in Python."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Joan Camps Morey", email = "joan.camps@zeentcom" }
]
keywords = ["api", "http", "client", "toolkit", "logging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Internet :: WWW/HTTP"
]
dependencies = [
  "httpx>=0.27.0"
]

[project.urls]
Homepage = "https://github.com/zeent/apitkt"
Repository = "https://github.com/zeent/apitkt"
Issues = "https://github.com/zeent/apitkt/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]